syntax = "proto3";

//option objc_class_prefix = "HLW";

//option go_package 用于生成的.pb.go文件,在引用时和生成go包名时起作用
option go_package = "./proto";

package main;

service TestServer{
  rpc Hello (HelloRequest) returns (HelloReply){}
}

message HelloRequest{
  string name = 1;
}

message HelloReply{
  string message = 1;
}